# miniops

./: .gitignore  CMakeLists.txt  README.md  Releasing.md  pyproject.toml
.github/workflows/: ci.yml  release.yml  wheels.yml
benchmarks/: analyze_benchmarks.py  benchmark_ops.py
conda/recipe/: meta.yaml
results/phase6/: benchmark_results.csv
results/phase7/: benchmark_summary.csv  benchmark_summary.md
src/UNKNOWN.egg-info/: SOURCES.txt  top_level.txt
src/bindings/: bindings.cpp
src/cpp/: miniops_cpu.cpp  miniops_cpu.h  smoke_test.cpp
src/miniops/: __init__.py  reference.py
tests/: test_backend.py  test_parity.py  test_reference.py  tests_backend.py
